# GRPC-Service

./: .gitignore  CMakeLists.txt  CMakeSettings.json  glitch.json
package/: catch2.cmake  fmtlib.cmake  grpc.cmake  sqlite.cmake
src/: benchmark.hpp  common.hpp  database.cpp  database.hpp  logger.hpp  main.cpp  server.cpp  server.hpp  service_invoker.cpp  service_invoker.hpp  service_registration.hpp  streaming.cpp  streaming.hpp  version.cpp  version.cpp.in  version.hpp
src/activities/: activities.service.cpp  activities.service.hpp
src/activities/entity/: activities.entity.hpp
src/greeter/: greeter.service.cpp  greeter.service.hpp
src/products/: product.service.cpp  product.service.hpp
src/products/entity/: product.entity.hpp
src/proto/: activity.proto  helloworld.proto  product.proto  user.proto
src/protobuf/: activity.grpc.pb.cc  activity.grpc.pb.h  activity.pb.cc  activity.pb.h  helloworld.grpc.pb.h  helloworld.pb.cc  product.grpc.pb.cc  product.grpc.pb.h  product.pb.cc  product.pb.h  user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h
src/responder/: responder_invoker.hpp
src/services/: helloworld.grpc.pb.cc  helloworld.pb.cc
src/users/: user.service.hpp
test/: CMakeLists.txt  test_main.cpp
